CAN-1151: Mediathread accessibility: Ensure active user interface components have sufficient contrast

--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -4390,3 +4390,6 @@ ul.selection-spinner {
     text-align: center;
 }
 
+.form-control::placeholder {
+  color: #6B7780;
+}
